.deploy/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: http-default
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
